--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input id="file" type='file' onchange="readURL(this, w, h);" />
     <br>
     
-    <a href="#" download="picture"><img id="blah" src="#" /></a>
+    <img id="blah" src="#" />
   </div>
   
 </body>
