--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="scripts.js"></script>
     
     <meta charset=utf-8 />
-    <title>JS Bin</title>
+    <title>update</title>
 
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -32,7 +32,7 @@
     <input id="file" type='file' onchange="readURL(this, w, h);" />
     <br>
     
-    <a href="#" download="picture"><img id="blah" src="#" /></a>
+    <img id="blah" src="#" />
   </div>
   
 </body>
