--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>The a download attribute</h1>
 
 <p>Click on the image to download it:<p>
-<a href="E:/data.txt" download>
+<a href="images/data.txt" download>
   Dowload
  
 </a>
